# testcicd

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
